# atnKB

./: .gitignore  README.md  app.py  app2.py  ingest.py  ingest_postgre  llm_utils.py  orchestrator_utils.py  pinecone_utils.py  postgres_utils.py  postgres_utils2.py  pyproject.toml  railway.json  requirements.txt  ui_utils.py
Pinecone/: ingest.py
PostgreSQL/: ingest.py
static/css/: chat.css
static/js/: chat.js
templates/: base.html  chat.html
