[project]
name = "atnkbchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.12",
    "openai>=1.104.2",
    "pinecone>=7.3.0",
    "psycopg2>=2.9.10",
    "sentence-transformers>=5.1.0",
    "streamlit>=1.49.1",
    "unicorn>=2.1.4",
]
